tests/integration/errors/unexpected_character.rsg
// TEST: compile_error
// EXPECT-ERROR: unexpected character '$'
module test_err

fn main() {
    x := $invalid
}
